--- a/gpt2_scratch_params.yaml
+++ b/gpt2_scratch_params.yaml
@@ -21,13 +21,13 @@ ml:
   train_batch_size: 256
 
 generation:
-  prefix: "[others] ciao!"
+  prefix: "iota#9028 ka galvoji apie csgo?"
   temperature: 0.7 # Determines the "creativity" of the generated text. The value range is different for each type of Transformer.
-  n_text: 100 # Numbers of texts to generate.
+  n_text: 5 # Numbers of texts to generate.
   batch_size: 1 # Number of texts to generate simultaneously
   seed: 42
   cleanup: True # Remove empty texts and strip out extra newlines/extra spaces
-  max_length: 256 # Maximum length for the generated text
+  max_length: 2000 # Maximum length for the generated text
   top_p: 0.9 # The cumulative probability of parameter highest probability vocabulary tokens to keep for nucleus sampling. Must be between 0 and 1. Default to 1.
   repetition_penalty: 1.0 # The parameter for repetition penalty. Between 1.0 and infinity. 1.0 means no penalty. Default to 1.0.
   early_stopping: False # if set to `True` beam search is stopped when at least `num_beams` sentences finished per batch. Defaults to `False` as defined in `configuration_utils.PretrainedConfig`.
